--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.6.5",
     "firebase": "^7.17.0",
     "vue": "^2.6.11",
+    "vue-element-loading": "^1.1.5",
     "vue-router": "^3.2.0",
     "vuefire": "^2.2.3",
     "vuex": "^3.4.0"
